updated SP paper, added declaration and ack

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
@@ -4,6 +4,10 @@
 	\textbf{Acknowledgment}
 \end{center}
 
-% the acknowledgements recognize individuals who have supported the writer’s scholarly efforts as they relate to the research (professors. research persons) etc. Those who helped directly in the research.
-% guide: https://capella.libanswers.com/doctoralsupport/faq/132979
-Lorem ipsum.
+This Special Problem was made possible with the help of several individuals, to whom we owe a great debt of gratitude. Without their assistance, this work would not have been successful.
+
+To Professor Francis D. Dimzon for serving as our Special Problem Advisor and guiding us throughout two semesters. His insights, critiques, and patience were invaluable in making this Special Problem possible.
+
+To PCpl Hercharme D. Demegillo of Police Regional Office 6 for responding to our inquiries regarding the PNP's protocol in handling incidents. Her assistance was crucial in providing us with the necessary information for this study.
+
+And lastly, to the numerous programmers in Stack Overflow, GitHub, and PubDev for providing the technical solutions and ideas in the development of this study's system prototype. Their contributions were insurmountable towards the study's completion.
