--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_5.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_5.tex
@@ -11,10 +11,9 @@ The creation of main user (reportees and general public) and PNP interfaces was 
 
 All the aforementioned interfaces and features were deliberately planned and implemented to prove the feasibility and practicability of an online reporting, report management, and dissemination framework for missing persons cases.  HanApp does not, in any way, undermine nor revise the PNP's guidelines on the reporting and handling of missing persons cases but simply extend its scope and improve its accessibility through the use of modern technology while still remaining compliant to the aforementioned guidelines.
 
-Furthermore, the study's novelty may serve as a catalyst for related initiatives, leading to the modernization of crime/incident reporting to the PNP through online software solutions and the creation of a more dependable reporting system while still remaining compliant with the PNP's guidelines.
+Furthermore, the study's novelty may serve as a catalyst for related initiatives, leading to the modernization of crime/incident reporting to the PNP through online software solutions, and adapting PNP reporting procedures into developing dependable and more accessible reporting systems.
 
-The study concludes that a system that not only streamlines the reporting and verification process but also provides timely information regarding PNP-verified missing persons cases in their area, is both feasible and beneficial in quickly resolving these cases.
-
+The study concludes the that it is feasible and beneficial to implement an online reporting and dissemination system that leverages current technology to streamline the reporting and verification process, and provides timely information regarding PNP-verified missing persons cases in their area, while still adhering to PNP guidelines .
 
 \section{Recommendations}
 
