--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/dedication.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/dedication.tex
@@ -3,5 +3,8 @@
 	\textbf{Dedication}
 \end{center}
 
-%insert dedication to family/friends/significant inviduals. More personal compared to acknowledgement. guide: https://capella.libanswers.com/doctoralsupport/faq/132979
-Lorem ipsum.
+We, Team HanApp, dedicate this Special Problem to all our teachers for imparting us with the knowledge and foresight necessary to complete this undertaking, to all succeeding researchers who will reference or build upon this work, and to our family, friends, significant others, and colleagues for their unwavering support throughout the conduct of this study.
+
+To the families and friends of missing persons in the Philippines and the authorities in charge of these cases, we wholeheartedly dedicate this Special Problem and the HanApp application suite to you. We hope that HanApp can make a difference in the lives of individuals affected by missing persons incidents in the Philippines.
+
+\textit{Lagi't lagi, para sa bayan!}
