--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
@@ -1,26 +1,26 @@
 %   Filename    : approval.tex 
 \begin{center}
-\textbf{Approval Sheet}
+	\textbf{Approval Sheet}
+		
+	The Division of Physical Sciences and Mathematics, College of Arts and Sciences, University of the Philippines Visayas 
 	
-The Division of Physical Sciences and Mathematics, College of Arts and Sciences, University of the Philippines Visayas 
-
-certifies that this is the approved version of the following special problem:
-
-\thestitle{This is The Title of Your Special Problem}
-\end{center}
-
-{\small\textbf{Approved by:}}
-
-\newcommand{\signaturerule}{\rule{10em}{.4pt}}
-	\begin{tabular}{lll}
-		\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
-		\signaturerule &\signaturerule  & \signaturerule\\ 
-		(Adviser)\\ \\
-		\signaturerule &\signaturerule &\signaturerule\\
-		(Co-Adviser)\\ \\
-		\signaturerule &\signaturerule &\signaturerule\\
-		(Reader)\\ \\
-		\signaturerule &\signaturerule &\signaturerule\\
-		(Division Chair)
-
-	\end{tabular}
+	certifies that this is the approved version of the following special problem:
+	
+	\thestitle{HanApp: A Missing Persons Reporting and Alerting Application Suite in the Philippines}
+	\end{center}
+	
+	{\small\textbf{Approved by:}}
+	
+	\newcommand{\signaturerule}{\rule{10em}{.4pt}}
+		\begin{tabular}{lll}
+			\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
+			\underline{Prof. Francis D. Dimzon} &\signaturerule  & \signaturerule\\ 
+			(Adviser)\\ \\
+			% \signaturerule &\signaturerule &\signaturerule\\
+			% (Co-Adviser)\\ \\
+			% \signaturerule &\signaturerule &\signaturerule\\
+			% (Reader)\\ \\
+			\underline{Dr. Arnel L. Tampos}  &\signaturerule &\signaturerule\\
+			(Division Chair)
+	
+		\end{tabular}
