--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
@@ -11,7 +11,7 @@ We,  Guides, Emmanuel Tarek Shayne, Hismaña, Nikko Gabriel, and Torculas, Erru,
 
 	\begin{tabular}{lll}
 	\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
-    Guides, Emmanuel Tarek \\Shayne \\
+    Guides, Emmanuel \\ Tarek Shayne \\
 	\signaturerule &\signaturerule  & \signaturerule\\ 
 	(Student)\\ \\
     Hismaña, Nikko Gabriel \\
