--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/acknowledgment.tex
@@ -4,7 +4,7 @@
 	\textbf{Acknowledgment}
 \end{center}
 
-This Special Problem was made possible with the help of several individuals, to whom we owe a great debt of gratitude. Without their assistance, this work would not have been successful.
+This Special Problem was made possible with the help of several individuals, to whom we owe a great debt of gratitude. Without their assistance, this study would not have been successful.
 
 To Professor Francis D. Dimzon for serving as our Special Problem Advisor and guiding us throughout two semesters. His insights, critiques, and patience were invaluable in making this Special Problem possible.
 
