--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
@@ -93,11 +93,11 @@ Finally, in order to facilitate report filing and management, as well as alertin
 \label{sec:userInfoAcccess}
 The application will only have two interfaces which will cater to its two primary users — the general user, and the PNP personnel/helpdesk in charge of missing persons cases. Since this is an online-only application suite with a mobile interface for the main users and a desktop interface for the PNP, and the application’s scope is limited to the Philippines, only users in the Philippines with compatible smartphones and access to the internet will be able to use the app.
 
-Due to the sensitivity of the data being handled, it’s important to define the scope and limits of each user’s access to address data privacy and security concerns.
+Due to the sensitivity of the data being handled, it is important to define the scope and limits of each user’s access to address data privacy and security concerns.
 
 \begin{enumerate}
     \item The general users refer to the general public who either wish to report a missing persons case, or assist with search efforts for missing persons. They will only have access to information regarding their registered account, the updates provided by PNP on the report they filed, and the information included in the PNP-verified missing persons in their area.
-    \item The PNP personnel/helpdesk in charge of missing persons cases and have access to their HanApp PNP account will only have access to information provided through reports, and will not be given access to any other information from the users or their devices.
+    \item The PNP personnel/help desk in charge of missing persons cases and have access to their HanApp PNP account will only have access to information provided through reports, and will not be given access to any other information from the users or their devices.
 \end{enumerate}
 
 Moreover, the application’s administrators and developers will only have access to the serverless database containing the submitted reports and the (PNP and User) account names and emails at most. As such, user passwords and user’s current location information will not be accessible by anyone apart from the users themselves. 
