--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_5.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_5.tex
@@ -47,7 +47,7 @@ This subsection enumerates the external resources and systems that the applicati
 
 \subsubsection{1. Improve the Accuracy and Completeness on Geocoded Locations}
 
-As noted in Chapter 4, the reverse geocoding occasionally yields accurate address information regarding the selected last known location of the absent/missing person, but occasionally returns incomplete or less accurate address information based on the location data registered in Google Maps (and fetched by the Google Geocoding API). As a result, in order to ensure the accuracy and completeness of addresses  fetched through reverse geocoding in the reports, it is necessary to improve Google Maps data to represent the actual addressess. Alternatively, it is also  recommended to look for geocoding APIs that returns more accurate and comprehensive location information.
+As noted in Chapter 4, the reverse geocoding provides accurate address information regarding the selected last known location of the absent/missing person, but occasionally returns incomplete or less accurate address information based on the location data registered in Google Maps (and fetched by the Google Geocoding API). As a result, in order to ensure the accuracy and completeness of addresses  fetched through reverse geocoding in the reports, it is necessary to improve Google Maps data to represent the actual addressess. Alternatively, it is also  recommended to look for geocoding APIs that returns more accurate and comprehensive location information.
 
 \subsubsection{2. PNP Stations Directory and Precinct Map Data} 
 
