--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
@@ -3,7 +3,9 @@
 %               a. specify related packages
 %               b. set margins, commands, etc.
 %\documentclass[12pt,titlepage,onepage, letterpaper]{article}
-\documentclass[12pt,titlepage,twopage, letterpaper]{book}
+
+\documentclass[12pt,titlepage, letterpaper]{book}
+
 \usepackage{setspace}
 \doublespacing
 
