--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
@@ -1,26 +1,29 @@
 %   Filename    : approval.tex 
 \begin{center}
-	\textbf{Approval Sheet}
-		
-	The Division of Physical Sciences and Mathematics, College of Arts and Sciences, University of the Philippines Visayas 
+\textbf{Approval Sheet}
 	
-	certifies that this is the approved version of the following special problem:
-	
-	\thestitle{HanApp: A Missing Persons Reporting and Alerting Application Suite in the Philippines}
-	\end{center}
-	
-	{\small\textbf{Approved by:}}
-	
-	\newcommand{\signaturerule}{\rule{10em}{.4pt}}
-		\begin{tabular}{lll}
-			\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
-			\underline{Prof. Francis D. Dimzon} &\signaturerule  & \signaturerule\\ 
-			(Adviser)\\ \\
-			% \signaturerule &\signaturerule &\signaturerule\\
-			% (Co-Adviser)\\ \\
-			% \signaturerule &\signaturerule &\signaturerule\\
-			% (Reader)\\ \\
-			\underline{Dr. Arnel L. Tampos}  &\signaturerule &\signaturerule\\
-			(Division Chair)
-	
-		\end{tabular}
+The Division of Physical Sciences and Mathematics, College of Arts and Sciences, University of the Philippines Visayas 
+
+certifies that this is the approved version of the following special problem:
+
+\thestitle{HanApp: A Missing Persons Reporting and Alerting Application Suite in the Philippines}
+\end{center}
+
+{\small\textbf{Approved by:}}
+
+\newlength{\maxnamewidth}
+\setlength{\maxnamewidth}{\widthof{Prof. Francis D. Dimzon}}
+
+\newcommand{\signaturerule}{\rule{10em}{.4pt}}
+	\begin{tabular}{lll}
+		\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
+		\underline{Prof. Francis D. Dimzon} &\signaturerule  & \signaturerule\\ 
+		(Adviser)\\ \\
+		% \signaturerule &\signaturerule &\signaturerule\\
+		% (Co-Adviser)\\ \\
+		% \signaturerule &\signaturerule &\signaturerule\\
+		% (Reader)\\ \\
+            \underline{\makebox[\maxnamewidth][l]{Dr. Arnel L. Tampos}}&\signaturerule &\signaturerule\\
+		(Division Chair)
+
+	\end{tabular}
