--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
@@ -9,17 +9,22 @@
 
 We,  Guides, Emmanuel Tarek Shayne, Hismaña, Nikko Gabriel, and Torculas, Erru, hereby certify that this Special Problem, including the pdf file, has been written by us  and is the record of work carried out by us. Any significant borrowings have been properly acknowledged and referred.
 
-	\begin{tabular}{lll}
-	\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
-    Guides, Emmanuel \\ Tarek Shayne \\
-	\signaturerule &\signaturerule  & \signaturerule\\ 
-	(Student)\\ \\
-    Hismaña, Nikko Gabriel \\
-	\signaturerule &\signaturerule &\signaturerule\\
-	(Student)\\ \\
-    Torculas, Erru \\
-	\signaturerule &\signaturerule &\signaturerule\\
-	(Student)
+\newlength{\maxnamewidth}
+\setlength{\maxnamewidth}{\widthof{Guides, Emmanuel Tarek Shayne}}
+
+\newlength{\maxdatewidth}
+\setlength{\maxdatewidth}{\widthof{xxxxxxxxxxxxxx}}
+
+\begin{tabular}{lll}
+\\
+\bfseries Name & \bfseries Signature & \bfseries Date \\ \\
+\underline{Guides, Emmanuel Tarek Shayne} & \underline{\hspace{4cm}} & 
+\underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+(Student) \\ \\
+\underline{\makebox[\maxnamewidth][l]{Hismaña, Nikko Gabriel}} &  \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+(Student) \\ \\
+\underline{\makebox[\maxnamewidth][l]{Torculas, Erru}} & \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+(Student) \\
 \end{tabular}
 
 
